2011-01-30  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi: Add new section
	"Customizing Toolkit Behavior"

	* interpreter/plot.txi: Add functions gnuplot_binary, mouse_wheel_zoom,
	and gui_mode to new section.

2011-01-30  Rik  <octave@nomad.inbox5.com>

	* interpreter/optim.txi: Deprecate glpkmex function and remove
	from documentation.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* interpreter/install.txi (Compiling Octave with 64-bit	Indexing):
	Remove info about ARPACK.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi: Add new subsection on FLTK interaction.
	* interpreter/plot.txi: Add fltk_gui_mode, fltk_mouse_wheel_zoom
	functions to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/arith.txi: Add accumdim function to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/set.txi: Add powerset function to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add S_ISSOCK function to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add S_ISBLK and related functions to
	documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/optim.txi: Add glpkmex function to documentation.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add compare_versions function to
	documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/numbers.txi: Add sizemax function to documentation.
	* interpreter/doccheck/mk_undocumented_list: Add ifelse to functions
	not requiring documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/image.txi: Add whitebg function to documentation.
	* interpreter/plot.txi: Add reset function to documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/linalg.txi: Add rsf2csf to documentation.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/geometry.txi: Add trisurf to documentation.
